Change color on stats section

--- a/src/styles/StatsSection.module.css
+++ b/src/styles/StatsSection.module.css
@@ -1,6 +1,6 @@
 .statsSection {
     padding: 1rem;
-    background-color: #a9a5a2;
+    background-color: #785e4a;
     border-radius: 12px;
     text-align: center;
   }
