Change background color on stats section

--- a/src/styles/StatsSection.module.css
+++ b/src/styles/StatsSection.module.css
@@ -1,6 +1,6 @@
 .statsSection {
     padding: 1rem;
-    background-color: #785e4a;
+    background-color: #d4d1ce;
     border-radius: 12px;
     text-align: center;
   }
