Change stats background color

--- a/src/styles/StatsSection.module.css
+++ b/src/styles/StatsSection.module.css
@@ -1,6 +1,6 @@
 .statsSection {
     padding: 1rem;
-    background-color: #b3b0ad;
+    background-color: #dbdad8;
     border-radius: 12px;
     text-align: center;
   }
