Change background color temporarily'

--- a/src/styles/StatsSection.module.css
+++ b/src/styles/StatsSection.module.css
@@ -1,6 +1,6 @@
 .statsSection {
     padding: 1rem;
-    background-color: #dbdad8;
+    background-color: #e4ab38;
     border-radius: 12px;
     text-align: center;
   }
