--- a/src/styles/ArtistSpotlight.module.css
+++ b/src/styles/ArtistSpotlight.module.css
@@ -87,7 +87,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   margin-top: 0.5rem;
-  color: #fff;
+  color: #ffffffe8;
   text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3), 0 0 25px rgba(0, 255, 255, 0.2), 0 0 50px rgba(0, 255, 255, 0.2);
   letter-spacing: 1px;
   font-weight: 400;
