--- a/src/styles/TopTracks.module.css
+++ b/src/styles/TopTracks.module.css
@@ -75,7 +75,7 @@
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3), 0 0 25px rgba(0, 255, 255, 0.2),
       0 0 50px rgba(0, 255, 255, 0.2);
     text-align: center;
-    color: #ffffff;
+    color: #ffffffe8;
     text-transform: uppercase;
     letter-spacing: 2px;
     opacity: 0;
