--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -629,7 +629,7 @@
   text-transform: uppercase;
   font-family: "Exo 2", sans-serif;
   letter-spacing: 2px;
-  color: #ffffff;
+  color: #ffffffe8;
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
   opacity: 0;
   transform: translate(-50%, -50%);
