--- a/src/styles/Testimonials.module.css
+++ b/src/styles/Testimonials.module.css
@@ -13,7 +13,7 @@
     position: relative;
     padding: 1rem;
     border-radius: 12px;
-    color: #ffffff;
+    color: #a63131;
     overflow: hidden;
     text-align: center;
     min-height: 200px;
