Change color of text

--- a/src/styles/Testimonials.module.css
+++ b/src/styles/Testimonials.module.css
@@ -96,7 +96,7 @@
   
   .testimonialCard footer {
     font-size: 0.8rem;
-    color: #674adb;
+    color: #fbfbfb;
     font-style: italic;
     text-shadow: 0 0 5px rgba(200, 255, 255, 0.3);
   }
