Change font size of testimonial text on larger screensizes

--- a/src/styles/Testimonials.module.css
+++ b/src/styles/Testimonials.module.css
@@ -93,6 +93,12 @@
     margin-top: 0.25rem;
     margin-bottom: 0.25rem;
   }
+
+  @media (min-width: 1200px) {
+    .testimonialCard p {
+      font-size: 0.8rem;
+    }
+  }
   
   .testimonialCard footer {
     font-size: 0.7rem;
