--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -384,23 +384,30 @@
 
 .infoOverlayText {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
+  width: 80%;
   text-align: center;
   color: #fff;
   z-index: 2;
 }
 
 .infoOverlayText h2 {
-  font-size: 1.8rem;
+  font-family: "Exo 2", sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 1.6rem;
   margin-bottom: 0.5rem;
   text-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
 }
 
 .infoOverlayText p {
-  font-size: 1rem;
+  font-family: "Poppins", sans-serif;
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
+  max-width: 600px;
+  font-size: 0.6rem;
+  letter-spacing: 1px;
 }
 
 
