--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -32,6 +32,12 @@
   border-radius: 8px;
 }
 
+@media (max-width: 768px) {
+  .TrackImage {
+    height: 350px;
+  }
+}
+
 .TrackImage:hover {
   box-shadow: 0 0 8px rgb(255, 255, 255) !important;
   transition: box-shadow 0.3s ease !important;
@@ -59,6 +65,7 @@
 }
 
 .TrackTitle {
+  font-family: "Exo 2", sans-serif;
   font-weight: bold;
   text-transform: uppercase;
   font-size: 0.6rem;
@@ -103,6 +110,13 @@
   left: 50% !important;
   transform: translate(-50%, -50%) !important;
   transition: background-color 0.3s ease !important;
+}
+
+@media (max-width: 768px) {
+  .PlayButton {
+    top: 110% !important;
+    font-size: 4.5rem !important;
+  }
 }
 
 .PlayButton:hover {
@@ -318,7 +332,7 @@
   }
 
   .TrackTitle {
-    font-size: 0.5rem;
+    font-size: 1rem;
   }
 
   .UpdatedAt {
