--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -763,3 +763,26 @@
 .alignStretch {
   align-items: stretch;
 }
+
+.shareImage {
+  width: 100%;
+  height: 300px;
+  background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1758045443/event-1_jrfcs4.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  opacity: 0.99;
+  filter: blur(3px);
+  mask-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 1) 40%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  -webkit-mask-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 1) 40%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
