--- a/src/styles/TracksPage.module.css
+++ b/src/styles/TracksPage.module.css
@@ -764,6 +764,12 @@
   align-items: stretch;
 }
 
+.shareImageWrapper {
+  position: relative;
+  width: 100%;
+  height: 300px;
+}
+
 .shareImage {
   width: 100%;
   height: 300px;
@@ -785,4 +791,26 @@
     rgba(0, 0, 0, 1) 40%,
     rgba(0, 0, 0, 0) 100%
   );
+}
+
+.shareOverlayText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: #fff;
+  z-index: 2;
+}
+
+.shareOverlayText h2 {
+  font-family: "Exo 2", sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 4.5rem;
+  margin: 0;
+  color: #ffffffe8;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3),
+    0 0 25px rgba(0, 255, 255, 0.2),
+    0 0 50px rgba(0, 255, 255, 0.2);
 }
