--- a/src/styles/Track.module.css
+++ b/src/styles/Track.module.css
@@ -310,10 +310,11 @@
   margin-right: 0 !important;
   vertical-align: middle !important;
   position: absolute;
-  left: 0;
+  left: -2px;
   top: 50%;
   transform: translateY(-50%);
   transition: transform 0.3s ease;
+  font-size: 0.8rem
 }
 
 .RatingDropdown.show .RateButton::after {
