--- a/src/styles/EventsPage.module.css
+++ b/src/styles/EventsPage.module.css
@@ -148,17 +148,37 @@
 }
 
 .eventsHeading {
-  position: relative;
+  position: relative; /* stays in normal flow */
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 400;
   text-align: center;
   margin-bottom: 0.5rem;
   z-index: 1;
+  font-family: "Exo 2", sans-serif;
+  letter-spacing: 2px;
+  color: #ffffffe8;
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
+  text-transform: uppercase;
+  opacity: 0;
+  animation: fadeSlideIn 1.5s ease-out forwards;
 }
+
+@keyframes fadeSlideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-10%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
 
 .eventsText {
   position: relative;
-  font-size: 1rem;
+  font-size: 0.75rem;
   line-height: 1.6;
   text-align: center;
   max-width: 600px;
