--- a/src/styles/EventsPage.module.css
+++ b/src/styles/EventsPage.module.css
@@ -148,14 +148,14 @@
 }
 
 .eventsHeading {
-  position: relative; /* stays in normal flow */
-  font-size: 1.5rem;
+  position: relative;
+  font-size: 1.3rem;
   font-weight: 400;
   text-align: center;
   margin-bottom: 0.5rem;
   z-index: 1;
   font-family: "Exo 2", sans-serif;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
   color: #ffffffe8;
   text-shadow: 0 0 6px rgba(0, 0, 0, 0.8);
   text-transform: uppercase;
