Change background image

--- a/src/styles/EventsPage.module.css
+++ b/src/styles/EventsPage.module.css
@@ -118,7 +118,7 @@
 .eventsCard {
   position: relative;
   flex: 1;
-  background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1759258446/blue-6_rmnkxf.avif");
+  background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1759258891/back-1_h86lti.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
