--- a/src/styles/EventsPage.module.css
+++ b/src/styles/EventsPage.module.css
@@ -233,3 +233,81 @@
       font-size: 5rem;
   }
 }
+
+.eventImageWrapper {
+  position: relative;
+  width: 100%;
+  height: 150px;
+}
+
+.eventImage {
+  width: 100%;
+  height: 150px;
+  background-image: url("https://res.cloudinary.com/dmylma7bf/image/upload/v1758045443/event-1_jrfcs4.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  opacity: 0.99;
+  filter: blur(3px);
+  mask-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 1) 40%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  -webkit-mask-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 1) 40%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.eventOverlayText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  z-index: 2;
+}
+
+.eventOverlayText h2 {
+  position: relative;
+  font-family: "Exo 2", sans-serif;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 4.5rem;
+  margin: 0;
+  color: #ffffffe8;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3),
+    0 0 25px rgba(0, 255, 255, 0.2),
+    0 0 50px rgba(0, 255, 255, 0.2);
+  text-align: center;
+  height: 1em;
+}
+
+.eventOverlayText h2 span {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  animation: fadeWords 6s infinite;
+}
+
+.eventOverlayText h2 span:nth-child(1) {
+  animation-delay: 0s;
+}
+
+.eventOverlayText h2 span:nth-child(2) {
+  animation-delay: 3s;
+}
+
+@keyframes fadeWords {
+  0% { opacity: 0; }
+  10% { opacity: 1; }
+  40% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 0; }
+}
